--- a/PuertoRico/Player4.resx
+++ b/PuertoRico/Player4.resx
@@ -128,7 +128,7 @@
   <data name="build_p4_slot15.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.SnapToGrid" type="System.Boolean, mscorlib">
+  <data name="$SnapToGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="num_corn_label.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -176,7 +176,7 @@
   <data name="plant_p4_slot6.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib">
+  <data name="$TrayLargeIcon" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="num_indigo_label.Locked" type="System.Boolean, mscorlib">
@@ -185,7 +185,7 @@
   <data name="plant_p4_slot8.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.Name" xml:space="preserve">
+  <data name="$Name" xml:space="preserve">
     <value>Player4</value>
   </data>
   <data name="plant_p4_slot5.Modifiers" type="System.CodeDom.MemberAttributes, System">
@@ -242,19 +242,19 @@
   <data name="build_p4_slot16.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
+  <data name="$DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
   <data name="build_p4_slot6.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
+  <data name="$Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="build_p4_slot8.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.DrawGrid" type="System.Boolean, mscorlib">
+  <data name="$DrawGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="build_p4_slot9.Modifiers" type="System.CodeDom.MemberAttributes, System">
@@ -1345,7 +1345,7 @@
   <data name="build_p4_slot9.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.Localizable" type="System.Boolean, mscorlib">
+  <data name="$Localizable" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="build_p4_slot10.Locked" type="System.Boolean, mscorlib">
@@ -1372,7 +1372,7 @@
   <data name="build_p4_slot4.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
+  <data name="$Language" type="System.Globalization.CultureInfo, mscorlib">
     <value />
   </data>
   <data name="p4_close_button.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -1387,7 +1387,7 @@
   <data name="build_p4_slot3.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing">
+  <data name="$GridSize" type="System.Drawing.Size, System.Drawing">
     <value>2, 2</value>
   </data>
   <data name="vp_total_label.Locked" type="System.Boolean, mscorlib">
@@ -1429,7 +1429,7 @@
   <data name="governor_pic.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.TrayHeight" type="System.Int32, mscorlib">
+  <data name="$TrayHeight" type="System.Int32, mscorlib">
     <value>80</value>
   </data>
   <data name="build_p4_slot12.Modifiers" type="System.CodeDom.MemberAttributes, System">
