--- a/PuertoRico/Player2.resx
+++ b/PuertoRico/Player2.resx
@@ -131,7 +131,7 @@
   <data name="build_p2_slot12.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.SnapToGrid" type="System.Boolean, mscorlib">
+  <data name="$SnapToGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="num_corn_label.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -164,13 +164,13 @@
   <data name="Label4.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib">
+  <data name="$TrayLargeIcon" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="num_indigo_label.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.Name" xml:space="preserve">
+  <data name="$Name" xml:space="preserve">
     <value>Player2</value>
   </data>
   <data name="plant_p2_slot3.Modifiers" type="System.CodeDom.MemberAttributes, System">
@@ -206,7 +206,7 @@
   <data name="plant_p2_slot2.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
+  <data name="$DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
   <data name="plant_p2_slot12.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -218,10 +218,10 @@
   <data name="build_p2_slot16.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.Locked" type="System.Boolean, mscorlib">
+  <data name="$Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.DrawGrid" type="System.Boolean, mscorlib">
+  <data name="$DrawGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="build_p2_slot16.Modifiers" type="System.CodeDom.MemberAttributes, System">
@@ -1336,7 +1336,7 @@
   <data name="plant_p2_slot3.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.Localizable" type="System.Boolean, mscorlib">
+  <data name="$Localizable" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="num_indigo_label.Modifiers" type="System.CodeDom.MemberAttributes, System">
@@ -1357,7 +1357,7 @@
   <data name="p2_close_button.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
+  <data name="$Language" type="System.Globalization.CultureInfo, mscorlib">
     <value />
   </data>
   <data name="build_p2_slot11.Locked" type="System.Boolean, mscorlib">
@@ -1372,7 +1372,7 @@
   <data name="p2_close_button.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing">
+  <data name="$GridSize" type="System.Drawing.Size, System.Drawing">
     <value>2, 2</value>
   </data>
   <data name="vp_total_label.Locked" type="System.Boolean, mscorlib">
@@ -1423,7 +1423,7 @@
   <data name="governor_pic.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$this.TrayHeight" type="System.Int32, mscorlib">
+  <data name="$TrayHeight" type="System.Int32, mscorlib">
     <value>80</value>
   </data>
   <data name="build_p2_slot9.Locked" type="System.Boolean, mscorlib">
