Revert "Builds to Release executable"
This reverts commit 90de84f0471c88eb992c79184959fade41b8b465.

--- a/PuertoRico/Buildings.resx
+++ b/PuertoRico/Buildings.resx
@@ -451,7 +451,7 @@
   <data name="avail_buildings_slot1.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$SnapToGrid" type="System.Boolean, mscorlib">
+  <data name="$this.SnapToGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="avail_buildings_slot4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -806,10 +806,10 @@
   <data name="avail_buildings_slot15.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$TrayLargeIcon" type="System.Boolean, mscorlib">
+  <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$Name" xml:space="preserve">
+  <data name="$this.Name" xml:space="preserve">
     <value>Buildings</value>
   </data>
   <data name="avail_buildings_slot12.Modifiers" type="System.CodeDom.MemberAttributes, System">
@@ -1181,13 +1181,13 @@
         wXD/xmL/vGz/t2//wk//uVX1q1z7wHP5tD7ysGz5smr7w2z2u2rpq2vqsVX0uV7qsVvlrWXgq2QAAA==
 </value>
   </data>
-  <data name="$DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
+  <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$Locked" type="System.Boolean, mscorlib">
+  <data name="$this.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$DrawGrid" type="System.Boolean, mscorlib">
+  <data name="$this.DrawGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="do_not_build_button.Locked" type="System.Boolean, mscorlib">
@@ -4353,7 +4353,7 @@
   <data name="avail_buildings_slot9.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$Localizable" type="System.Boolean, mscorlib">
+  <data name="$this.Localizable" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
   <data name="avail_buildings_slot19.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -4362,7 +4362,7 @@
   <data name="PictureBox1.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$Language" type="System.Globalization.CultureInfo, mscorlib">
+  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
     <value />
   </data>
   <data name="avail_buildings_slot1.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -4700,7 +4700,7 @@
   <data name="avail_buildings_slot11.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$GridSize" type="System.Drawing.Size, System.Drawing">
+  <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing">
     <value>2, 2</value>
   </data>
   <data name="avail_buildings_slot2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -6107,7 +6107,7 @@
   <data name="avail_buildings_slot13.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$TrayHeight" type="System.Int32, mscorlib">
+  <data name="$this.TrayHeight" type="System.Int32, mscorlib">
     <value>80</value>
   </data>
   <data name="avail_buildings_slot21.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
