--- a/PuertoRico/Infonopic.resx
+++ b/PuertoRico/Infonopic.resx
@@ -118,23 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$SnapToGrid" type="System.Boolean, mscorlib">
+  <data name="$this.SnapToGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="$TrayLargeIcon" type="System.Boolean, mscorlib">
+  <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$Name" xml:space="preserve">
+  <data name="$this.Name" xml:space="preserve">
     <value>Infonopic</value>
   </data>
   <assembly alias="System" name="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
+  <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$Locked" type="System.Boolean, mscorlib">
+  <data name="$this.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$DrawGrid" type="System.Boolean, mscorlib">
+  <data name="$this.DrawGrid" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="Label1.Locked" type="System.Boolean, mscorlib">
@@ -156,13 +156,13 @@
   <data name="infonopic_timer1.Modifiers" type="System.CodeDom.MemberAttributes, System">
     <value>Assembly</value>
   </data>
-  <data name="$Localizable" type="System.Boolean, mscorlib">
+  <data name="$this.Localizable" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$Language" type="System.Globalization.CultureInfo, mscorlib">
+  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
     <value />
   </data>
-  <data name="$GridSize" type="System.Drawing.Size, System.Drawing">
+  <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing">
     <value>8, 8</value>
   </data>
   <data name="Button1.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
@@ -171,7 +171,7 @@
   <data name="Button1.Locked" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
-  <data name="$TrayHeight" type="System.Int32, mscorlib">
+  <data name="$this.TrayHeight" type="System.Int32, mscorlib">
     <value>80</value>
   </data>
   <data name="infonopic_timer1.DefaultModifiers" type="System.CodeDom.MemberAttributes, System">
